--- a/GameData/GlowingReputation/GlowingReputationSettings.cfg
+++ b/GameData/GlowingReputation/GlowingReputationSettings.cfg
@@ -1,15 +1,17 @@
-// Global settings for 
+// Global settings for reputations, in orbital height.
+// Value of 1 means full penalties, 0 is no penalties
 GLOWINGREPUTATIONSETTINGS
 {
 	REPUTATIONBODY
 	{
 		name = Kerbin
+		// We pretty much don't want nuclear material anywhere in LKO
 		reputationCurve
 		{
 			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 90000 1
+			key = 160000 0.8
+			key = 84159286 0.0
 		}
 	}
 	REPUTATIONBODY
@@ -17,10 +19,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Mun
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 2429559.1 0
 		}
 	}
 	REPUTATIONBODY
@@ -28,43 +28,40 @@ GLOWINGREPUTATIONSETTINGS
 		name = Minmus
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 2247428.4 0
 		}
 	}
 	REPUTATIONBODY
 	{
 		name = Duna
+		// nukes on duna are okay, but maybe not the best
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0.6
+			key = 50000 0.4
+			key = 47921949 0
 		}
 	}
 	REPUTATIONBODY
 	{
 		name = Ike
+		// nobody likes ike
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0.0
+			key = 1049598.9 0.0
 		}
 	}
 	REPUTATIONBODY
 	{
 		name = Eve
+		// eve is probably already radioactive
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0.1
+			key = 90000 0.05
+			key = 85109365 0.0
 		}
 	}
 	REPUTATIONBODY
@@ -72,10 +69,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Gilly
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 126123.27 0.0
 		}
 	}
 	REPUTATIONBODY
@@ -83,10 +78,9 @@ GLOWINGREPUTATIONSETTINGS
 		name = Moho
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 9646663.0 0.0
+
 		}
 	}
 	REPUTATIONBODY
@@ -94,32 +88,30 @@ GLOWINGREPUTATIONSETTINGS
 		name = Dres
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 32832840 0.0
+
 		}
 	}
 	REPUTATIONBODY
 	{
 		name = Jool
+		// Not a problem to ditch nuclear materials here...
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
 		}
 	}
 	REPUTATIONBODY
 	{
 		name = Laythe
+		// This is our ark! please don't pollute me!
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0.8
+			key = 50000 0.8
+			key = 90000 0.7
+			key = 3723645.8 0.0
 		}
 	}
 	REPUTATIONBODY
@@ -127,10 +119,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Vall
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0.0
+			key = 2406401.4 0
 		}
 	}
 	REPUTATIONBODY
@@ -138,10 +128,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Bop
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 1221060.9 0
 		}
 	}
 	REPUTATIONBODY
@@ -149,10 +137,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Tylo
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 10856518 0
 		}
 	}
 	REPUTATIONBODY
@@ -160,10 +146,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Pol
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 1042138.9 0
 		}
 	}
 	REPUTATIONBODY
@@ -171,10 +155,8 @@ GLOWINGREPUTATIONSETTINGS
 		name = Eeloo
 		reputationCurve
 		{
-			key = 0 1
-			key = 1.5 0.9 
-			key = 2.5 0.45 
-			key = 3.5 0.1 
+			key = 0 0
+			key = 11908294 0
 		}
 	}
 }
