Minor tweaks and new patches

--- a/GameData/GlowingReputation/Patches/Mods/GlowingReputationNFT.cfg
+++ b/GameData/GlowingReputation/Patches/Mods/GlowingReputationNFT.cfg
@@ -1,52 +1,46 @@
-
-@PART[ntr-gc-25-1]
+// NF Technologies Glowing Reputation Patch
+@PART[reactor-125]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 15
+		BaseReputationHit = 10
 	}
 }
-@PART[ntr-gc-25-2]
+@PART[reactor-0625]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 15
-	}
-	MODULE
-	{
-		name = ModuleReputationEngine
-		EngineID = MainExhaust
-		BaseReputationHit = 1
+		BaseReputationHit = 5
 	}
 }
-@PART[ntr-sc-25-1]
+@PART[reactor-25]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 15
+		BaseReputationHit = 25
 	}
 }
-@PART[ntr-sc-125-1]
+@PART[reactor-375]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 15
+		BaseReputationHit = 50
 	}
 }
-@PART[ntr-sc-125-2]
+@PART[reactor-25-2]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 15
+		BaseReputationHit = 35
 	}
 }
