added more parts to patch

--- a/GameData/GlowingReputation/Patches/Mods/GlowingReputationFFT.cfg
+++ b/GameData/GlowingReputation/Patches/Mods/GlowingReputationFFT.cfg
@@ -1,1 +1,147 @@
 // Far Future Technologies Glowing Reputation Patch
+// ----------
+// AM Engines
+@PART[am-beam-core-375-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = true
+    BaseReputationHit = 20
+  }
+  MODULE
+  {
+    name = ModuleReputationEngine
+    EngineID = MainExhaust
+    BaseReputationHit = 0.75
+  }
+}
+@PART[am-plasma-core-375-1]:FOR[GlowingReputation]
+{
+MODULE
+{
+  name = ModuleReputationDestruction
+  SafeUntilFirstActivation = true
+  BaseReputationHit = 20
+}
+MODULE
+{
+  name = ModuleReputationEngine
+  EngineID = MainExhaust
+  BaseReputationHit = 1
+}
+}
+
+// ----------
+// AM Catalyzed Engines
+@PART[aim-375-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = true
+    BaseReputationHit = 65
+  }
+  MODULE
+  {
+    name = ModuleReputationEngine
+    EngineID = MainExhaust
+    BaseReputationHit = 0.75
+  }
+}
+@PART[amcf-375-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = true
+    BaseReputationHit = 65
+  }
+  MODULE
+  {
+    name = ModuleReputationEngine
+    EngineID = MainExhaust
+    BaseReputationHit = 0.25
+  }
+}
+
+// ----------
+// Z-pinch Engines
+@PART[z-pinch-fission-375-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = true
+    BaseReputationHit = 65
+  }
+  MODULE
+  {
+    name = ModuleReputationEngine
+    EngineID = MainExhaust
+    BaseReputationHit = 0.5
+  }
+}
+@PART[z-pinch-fusion-375-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = true
+    BaseReputationHit = 65
+  }
+  MODULE
+  {
+    name = ModuleReputationEngine
+    EngineID = MainExhaust
+    BaseReputationHit = 0.25
+  }
+}
+
+// ----------
+// Super-nuke Engines
+@PART[nswr-25-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = true
+    BaseReputationHit = 25
+  }
+  MODULE
+  {
+    name = ModuleReputationEngine
+    EngineID = MainExhaust
+    BaseReputationHit = 15
+  }
+}
+
+// ----------
+// NSWR Tanks
+@PART[nsw-25-1]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = false
+    BaseReputationHit = 20
+  }
+}
+@PART[nsw-25-2]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = false
+    BaseReputationHit = 10
+  }
+}
+@PART[nsw-25-3]:FOR[GlowingReputation]
+{
+  MODULE
+  {
+    name = ModuleReputationDestruction
+    SafeUntilFirstActivation = false
+    BaseReputationHit = 5
+  }
+}
