--- a/GameData/GlowingReputation/Patches/Mods/GlowingReputationNFT.cfg
+++ b/GameData/GlowingReputation/Patches/Mods/GlowingReputationNFT.cfg
@@ -1,5 +1,5 @@
 // NF Technologies Glowing Reputation Patch
-@PART[reactor-125]
+@PART[reactor-125]:FOR[GlowingReputation]
 {
     MODULE
 	{
@@ -8,7 +8,7 @@
 		BaseReputationHit = 10
 	}
 }
-@PART[reactor-0625]
+@PART[reactor-0625]:FOR[GlowingReputation]
 {
     MODULE
 	{
@@ -17,7 +17,7 @@
 		BaseReputationHit = 5
 	}
 }
-@PART[reactor-25]
+@PART[reactor-25]:FOR[GlowingReputation]
 {
     MODULE
 	{
@@ -26,7 +26,7 @@
 		BaseReputationHit = 25
 	}
 }
-@PART[reactor-375]
+@PART[reactor-375]:FOR[GlowingReputation]
 {
     MODULE
 	{
@@ -35,12 +35,39 @@
 		BaseReputationHit = 50
 	}
 }
-@PART[reactor-25-2]
+@PART[reactor-25-2]:FOR[GlowingReputation]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
 		BaseReputationHit = 35
+	}
+}
+@PART[nuclearfuel-0625]:FOR[GlowingReputation]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = false
+		BaseReputationHit = 0.625
+	}
+}
+@PART[nuclearfuel-125]:FOR[GlowingReputation]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = false
+		BaseReputationHit = 1.25
+	}
+}
+@PART[nuclearfuel-25]:FOR[GlowingReputation]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = false
+		BaseReputationHit = 2.5
 	}
 }
