Enhance logging, add more parts

--- a/GameData/GlowingReputation/Patches/Mods/GlowingReputationKerbalAtomics.cfg
+++ b/GameData/GlowingReputation/Patches/Mods/GlowingReputationKerbalAtomics.cfg
@@ -1,5 +1,5 @@
 // Kerbal Atomics Glowing Reputation Patch
-@PART[ntr-gc-25-1]
+@PART[ntr-gc-25-1]:NEEDS[KerbalAtomics]
 {
     MODULE
 	{
@@ -8,7 +8,7 @@
 		BaseReputationHit = 50
 	}
 }
-@PART[ntr-gc-25-2]
+@PART[ntr-gc-25-2]:NEEDS[KerbalAtomics]
 {
     MODULE
 	{
@@ -23,16 +23,43 @@
 		BaseReputationHit = 1
 	}
 }
-@PART[ntr-sc-25-1]
+@PART[ntr-gc-25-3]:NEEDS[KerbalAtomics]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = true
-		BaseReputationHit = 25
+		BaseReputationHit = 50
 	}
 }
-@PART[ntr-sc-125-1]
+@PART[ntr-sc-375-1]:NEEDS[KerbalAtomics]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = true
+		BaseReputationHit = 100
+	}
+}
+@PART[ntr-sc-25-1]:NEEDS[KerbalAtomics]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = true
+		BaseReputationHit = 35
+	}
+}
+@PART[ntr-sc-125-1]:NEEDS[KerbalAtomics]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = true
+		BaseReputationHit = 20
+	}
+}
+@PART[ntr-sc-125-2]:NEEDS[KerbalAtomics]
 {
     MODULE
 	{
@@ -41,13 +68,12 @@
 		BaseReputationHit = 15
 	}
 }
-@PART[ntr-sc-125-2]
+@PART[ntr-sc-0625-1]:NEEDS[KerbalAtomics]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = true
-		BaseReputationHit = 15
+		BaseReputationHit = 10
 	}
 }
-
