--- a/GameData/GlowingReputation/Patches/Mods/GlowingReputationNFT.cfg
+++ b/GameData/GlowingReputation/Patches/Mods/GlowingReputationNFT.cfg
@@ -1,11 +1,12 @@
 // NF Technologies Glowing Reputation Patch
+// Nuclear Reactors
 @PART[reactor-125]:FOR[GlowingReputation]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 10
+		BaseReputationHit = 15
 	}
 }
 @PART[reactor-0625]:FOR[GlowingReputation]
@@ -14,7 +15,7 @@
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 5
+		BaseReputationHit = 10
 	}
 }
 @PART[reactor-25]:FOR[GlowingReputation]
@@ -23,7 +24,16 @@
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 25
+		BaseReputationHit = 35
+	}
+}
+@PART[reactor-25-2]:FOR[GlowingReputation]
+{
+    MODULE
+	{
+		name = ModuleReputationDestruction
+		SafeUntilFirstActivation = false
+		BaseReputationHit = 50
 	}
 }
 @PART[reactor-375]:FOR[GlowingReputation]
@@ -35,22 +45,24 @@
 		BaseReputationHit = 50
 	}
 }
-@PART[reactor-25-2]:FOR[GlowingReputation]
+@PART[reactor-375-2]:FOR[GlowingReputation]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 35
+		BaseReputationHit = 65
 	}
 }
+
+// Nuclear Fuel
 @PART[nuclearfuel-0625]:FOR[GlowingReputation]
 {
     MODULE
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 0.625
+		BaseReputationHit = 1
 	}
 }
 @PART[nuclearfuel-125]:FOR[GlowingReputation]
@@ -59,7 +71,7 @@
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 1.25
+		BaseReputationHit = 5
 	}
 }
 @PART[nuclearfuel-25]:FOR[GlowingReputation]
@@ -68,6 +80,6 @@
 	{
 		name = ModuleReputationDestruction
 		SafeUntilFirstActivation = false
-		BaseReputationHit = 2.5
+		BaseReputationHit = 10
 	}
 }
