--- a/GameData/GlowingReputation/GlowingReputationSettings.cfg
+++ b/GameData/GlowingReputation/GlowingReputationSettings.cfg
@@ -2,40 +2,78 @@
 // Value of 1 means full penalties, 0 is no penalties
 GLOWINGREPUTATIONSETTINGS
 {
-	REPUTATIONBODY
+	// Penalty data associated with a single CelestialBody with a specific name
+	BODYDATA
 	{
 		name = Kerbin
-		// We pretty much don't want nuclear material anywhere in LKO
+		// A list of Multipliers for penalties. A curve for reputation, Funds and Science is provided
+		// Form is as follows
+		// key = <altitude in MASL> <multiplier>
 		reputationCurve
 		{
-			key = 0 1
-			key = 90000 1
+			key = 0 1.0
+			key = 90000 1.0
 			key = 160000 0.8
 			key = 84159286 0.0
 		}
+		fundsCurve
+		{
+			key = 0 1.0
+			key = 90000 1.0
+			key = 160000 0.8
+			key = 84159286 0.0
+		}
+		scienceCurve
+		{
+			key = 0 1.0
+			key = 90000 1.0
+			key = 160000 0.8
+			key = 84159286 0.0
+		}
+		// A list of biomes that have additional (or lower) penalties
+		// The multiplier is multiplied by the reputationCurve value to get the final penalty
+		// In this case, at the KSC at sea level the total reputation penalty would be 150% and
+		// the total funds penalty 250%
+		BIOMEDATA
+		{
+			name = KSC
+			reputationMultiplier = 1.5
+			fundsMultiplier = 2.5
+			scienceMultiplier = 0.0
+		}
+		// In this case, over a desert at 5000m the total reputation penalty would be 50% and the funds penalty 5%
+		BIOMEDATA
+		{
+			name = Deserts
+			reputationMultiplier = 0.5
+			fundsMultiplier = 0.05
+			scienceMultiplier = 0.0
+		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Mun
+		// Who cares!
 		reputationCurve
 		{
 			key = 0 0
 			key = 2429559.1 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Minmus
+		// This ice cream can be really radioactive
 		reputationCurve
 		{
 			key = 0 0
 			key = 2247428.4 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Duna
-		// nukes on duna are okay, but maybe not the best
+		// nukes on duna are okay, but maybe planetary protection is a thing
 		reputationCurve
 		{
 			key = 0 0.3
@@ -43,7 +81,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 47921949 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Ike
 		// nobody likes ike
@@ -53,7 +91,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 1049598.9 0.0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Eve
 		// eve is probably already radioactive
@@ -64,18 +102,20 @@ GLOWINGREPUTATIONSETTINGS
 			key = 85109365 0.0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Gilly
+		// Radioactive ball of junk, ok
 		reputationCurve
 		{
 			key = 0 0
 			key = 126123.27 0.0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Moho
+		// Throw it down the mohole
 		reputationCurve
 		{
 			key = 0 0
@@ -83,9 +123,10 @@ GLOWINGREPUTATIONSETTINGS
 
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Dres
+		// Nobody likes dres
 		reputationCurve
 		{
 			key = 0 0
@@ -93,7 +134,7 @@ GLOWINGREPUTATIONSETTINGS
 
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Jool
 		// Not a problem to ditch nuclear materials here...
@@ -102,7 +143,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 0 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Laythe
 		// This is our ark! please don't pollute me!
@@ -114,7 +155,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 3723645.8 0.0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Vall
 		reputationCurve
@@ -123,7 +164,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 2406401.4 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Bop
 		reputationCurve
@@ -132,7 +173,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 1221060.9 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Tylo
 		reputationCurve
@@ -141,7 +182,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 10856518 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Pol
 		reputationCurve
@@ -150,7 +191,7 @@ GLOWINGREPUTATIONSETTINGS
 			key = 1042138.9 0
 		}
 	}
-	REPUTATIONBODY
+	BODYDATA
 	{
 		name = Eeloo
 		reputationCurve
