--- a/GameData/GlowingReputation/Patches/Mods/GlowingReputationFFT.cfg
+++ b/GameData/GlowingReputation/Patches/Mods/GlowingReputationFFT.cfg
@@ -8,12 +8,16 @@
     name = ModuleReputationDestruction
     SafeUntilFirstActivation = true
     BaseReputationHit = 20
+    BaseFundsHit = 100
+    BaseScienceHit = 0
   }
   MODULE
   {
     name = ModuleReputationEngine
     EngineID = MainExhaust
     BaseReputationHit = 0.75
+    BaseFundsHit = 100
+    BaseScienceHit = 0
   }
 }
 @PART[am-plasma-core-375-1]:FOR[GlowingReputation]
