--- a/GameData/GlowingReputation/Localization/en-us.cfg
+++ b/GameData/GlowingReputation/Localization/en-us.cfg
@@ -3,13 +3,13 @@ Localization
   en-us
   {
     #LOC_GlowingRepuation_ModulePenaltyDestruction_title = Penalty on Destruction
-    #LOC_GlowingRepuation_ModulePenaltyDestruction_description = Destroying this part has consequences depending on where you do it. \n\n<b>Base Losses</b>:
+    #LOC_GlowingRepuation_ModulePenaltyDestruction_description = Destroying this part has consequences if done in a sensitive area \n\n<b>Base Losses</b>:
     #LOC_GlowingRepuation_ModulePenaltyDestruction_description_rep = <<1>> Reputation
     #LOC_GlowingRepuation_ModulePenaltyDestruction_description_funds = <<1>> Funds
     #LOC_GlowingRepuation_ModulePenaltyDestruction_description_science = <<1>> Science
 
-    #LOC_GlowingRepuation_ModulePenaltyEngine_title  Penalty when Running
-    #LOC_GlowingRepuation_ModulePenaltyEngine_description =
+    #LOC_GlowingRepuation_ModulePenaltyEngine_title = Penalty when Running
+    #LOC_GlowingRepuation_ModulePenaltyEngine_description = Running this engine has consequences if done in a sensitive area
 
     #LOC_GlowingRepuation_Message_PartDestroyed_Base = <<1>> was destroyed in a sensitive area!
     #LOC_GlowingRepuation_Message_PartDestroyed_Rep = <<1>> ★ was lost!
