More refactor work

--- a/GameData/GlowingReputation/Localization/en-us.cfg
+++ b/GameData/GlowingReputation/Localization/en-us.cfg
@@ -2,18 +2,26 @@ Localization
 {
   en-us
   {
-    #LOC_GlowingRepuation_ModulePenaltyDestruction_title = Penalty on Destruction
-    #LOC_GlowingRepuation_ModulePenaltyDestruction_description = Destroying this part has consequences if done in a sensitive area \n\n<b>Base Losses</b>:
-    #LOC_GlowingRepuation_ModulePenaltyDestruction_description_rep = <<1>> Reputation
-    #LOC_GlowingRepuation_ModulePenaltyDestruction_description_funds = <<1>> Funds
-    #LOC_GlowingRepuation_ModulePenaltyDestruction_description_science = <<1>> Science
+    #LOC_GlowingRepuation_ModulePenaltyDestruction_title = Destruction Penalty
+    #LOC_GlowingRepuation_ModulePenaltyDestruction_description = Destroying this part has negative consequences if done in a sensitive area \n\n<b>Base Losses</b>:
+    #LOC_GlowingRepuation_ModulePenaltyDestruction_description_rep = - <<1>> Reputation
+    #LOC_GlowingRepuation_ModulePenaltyDestruction_description_funds = - <<1>> Funds
+    #LOC_GlowingRepuation_ModulePenaltyDestruction_description_science = - <<1>> Science
 
-    #LOC_GlowingRepuation_ModulePenaltyEngine_title = Penalty when Running
-    #LOC_GlowingRepuation_ModulePenaltyEngine_description = Running this engine has consequences if done in a sensitive area
+    #LOC_GlowingRepuation_ModulePenaltyOperation_title = Operational Penalty
+    #LOC_GlowingRepuation_ModulePenaltyOperation_description = Operating this part has negative  consequences if done in a sensitive area \n\n<b>Base Losses</b>:
+    #LOC_GlowingRepuation_ModulePenaltyOperation_description_rep = - <<1>> Reputation/second
+    #LOC_GlowingRepuation_ModulePenaltyOperation_description_funds = -  <<1>> Funds/second
+    #LOC_GlowingRepuation_ModulePenaltyOperation_description_science = - <<1>> Science/second
 
-    #LOC_GlowingRepuation_Message_PartDestroyed_Base = <<1>> was destroyed in a sensitive area!
-    #LOC_GlowingRepuation_Message_PartDestroyed_Rep = <<1>> ★ was lost!
-    #LOC_GlowingRepuation_Message_PartDestroyed_Funds = We were fined <<1>> Funds!
-    #LOC_GlowingRepuation_Message_PartDestroyed_Science = <<1>> ⚛ was lost!
+    #LOC_GlowingRepuation_Message_PartDestroyed_Base = A <<1>> was destroyed in a sensitive area! \n
+    #LOC_GlowingRepuation_Message_PartDestroyed_Rep = <<1>> ★ was lost! \n
+    #LOC_GlowingRepuation_Message_PartDestroyed_Funds = We were fined <<1>> Funds! \n
+    #LOC_GlowingRepuation_Message_PartDestroyed_Science = <<1>> ⚛ was lost! \n
+
+    #LOC_GlowingRepuation_Message_VesselDestroyed_Base = The vessel <<1>> (Unloaded) was destroyed in a sensitive area with dangerous parts onboard! \n
+    #LOC_GlowingRepuation_Message_PartDestroyed_Rep = <<1>> ★ was lost! \n
+    #LOC_GlowingRepuation_Message_PartDestroyed_Funds = We were fined <<1>> Funds! \n
+    #LOC_GlowingRepuation_Message_PartDestroyed_Science = <<1>> ⚛ was lost! \n
   }
 }
